--- a/index.html
+++ b/index.html
@@ -15,19 +15,144 @@
     <style>
       body {
         display: flex;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+      }
+
+      .sidebar {
+        width: 300px;
+        background-color: #34495e;
+        border-right: 2px solid #2c3e50;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+      }
+
+      .sidebar-header {
+        background-color: #2c3e50;
+        color: white;
+        padding: 15px;
+        text-align: center;
+        font-weight: bold;
+        border-bottom: 2px solid #34495e;
+      }
+
+      .option-selection {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      .option-btn {
+        padding: 12px;
+        background-color: #3498db;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+        transition: background-color 0.3s;
+      }
+
+      .option-btn:hover {
+        background-color: #2980b9;
+      }
+
+      .reset-btn {
+        padding: 10px;
+        background-color: #e74c3c;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin: 15px;
+        font-size: 14px;
+      }
+
+      .reset-btn:hover {
+        background-color: #c0392b;
+      }
+
+      .image-grid {
+        padding: 15px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        flex-grow: 1;
+      }
+
+      .image-item {
+        width: 100%;
+        height: 120px;
+        object-fit: cover;
+        border-radius: 5px;
+        cursor: pointer;
+        border: 2px solid transparent;
+        transition: border-color 0.3s;
+      }
+
+      .image-item:hover {
+        border-color: #3498db;
+      }
+
+      .folder-input {
+        display: none;
+      }
+
+      .main-content {
+        flex: 1;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        margin: 0;
-        gap: 10px;
-        padding: 10px;
-        padding-top: 30px;
+        padding: 20px;
+      }
+
+      .hidden {
+        display: none !important;
+      }
+
+      .loading {
+        text-align: center;
+        color: #ecf0f1;
+        padding: 20px;
       }
     </style>
   </head>
   <body>
-    <div id="tui-image-editor-container" style="height: 800px"></div>
+    <div class="sidebar">
+      <div class="sidebar-header">Image Gallery</div>
+      
+      <!-- Option Selection -->
+      <div id="option-selection" class="option-selection">
+        <button class="option-btn" onclick="selectLocalFolder()">
+          📁 Select Local Folder
+        </button>
+        <button class="option-btn" onclick="loadDefaultImages()">
+          🖼️ Use Default Images
+        </button>
+        <input type="file" id="folder-input" class="folder-input" webkitdirectory multiple accept="image/*">
+      </div>
+
+      <!-- Reset Button (hidden initially) -->
+      <button id="reset-btn" class="reset-btn hidden" onclick="resetToOptions()">
+        ↩️ Back to Options
+      </button>
+
+      <!-- Image Grid (hidden initially) -->
+      <div id="image-grid" class="image-grid hidden"></div>
+
+      <!-- Loading indicator -->
+      <div id="loading" class="loading hidden">Loading images...</div>
+    </div>
+
+    <div class="main-content">
+      <div id="tui-image-editor-container" style="height: 800px; width: 100%;"></div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.0/fabric.js"></script>
     <script src="https://uicdn.toast.com/tui-code-snippet/latest/tui-code-snippet.js"></script>
     <script src="https://uicdn.toast.com/tui-color-picker/latest/tui-color-picker.js"></script>
